@@ -12,7 +12,8 @@ MovieJukebox 1.0.16 beta
   - Enhancement  #442 Added proxy support
   - Enhancement  #444 New plugin to retrieve movie data from Russian movie database www.kinopoisk.ru
   - Fixed defect #449 Trailers are not excluded from the Year categories
-
+  - Fixed defect #451 Allocine Plugin didn't work anymore.
+  
 MovieJukebox 1.0.15 beta
 ------------------------
   - Enhancement   #72 Support for multi-episode files and folders
